[gd_scene load_steps=31 format=4 uid="uid://dd87xu0bcjcyh"]

[ext_resource type="Script" uid="uid://thij2ahmq165" path="res://house.gd" id="1_metfq"]
[ext_resource type="Texture2D" uid="uid://t2ggo1q2itq8" path="res://Legacy Adventure Pack - VILLAGE/Final/Tiles/Tiles.png" id="2_6syyc"]
[ext_resource type="Texture2D" uid="uid://lwij8oskmqit" path="res://icon.svg" id="3_6syyc"]

[sub_resource type="Gradient" id="Gradient_vy7fe"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.332881, 0.332881, 0.332881, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_10qhy"]
gradient = SubResource("Gradient_vy7fe")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vonw3"]
texture = ExtResource("2_6syyc")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
24:2/0 = 0
25:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
25:3/0 = 0
5:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
12:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
26:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
12:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
11:14/0 = 0
13:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
18:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
5:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
8:21/0 = 0
11:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
12:22/0 = 0
13:22/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
13:24/0 = 0
15:24/0 = 0
16:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
13:25/0 = 0
16:25/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
12:26/0 = 0
13:26/0 = 0
14:26/0 = 0
15:26/0 = 0
16:26/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
9:29/0 = 0
10:29/0 = 0
11:29/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0

[sub_resource type="TileSet" id="TileSet_oi3di"]
sources/0 = SubResource("TileSetAtlasSource_vonw3")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_n6hdu"]

[sub_resource type="Gradient" id="Gradient_6syyc"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6syyc"]
gradient = SubResource("Gradient_6syyc")
width = 256
height = 180
fill = 1
fill_from = Vector2(0.509174, 0.5)
fill_to = Vector2(0.344037, 0.117431)

[sub_resource type="Animation" id="Animation_o1325"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}

[sub_resource type="Animation" id="Animation_6syyc"]
resource_name = "breathing"
length = 3.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [5.0, 4.5, 5.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vy7fe"]
_data = {
&"RESET": SubResource("Animation_o1325"),
&"breathing": SubResource("Animation_6syyc")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_6syyc"]
polygon = PackedVector2Array(-112, -46, -90, -46, -90, 0, 96, 0, 101, -161, 85, -161, 85, -1, -71, -1, -70, -49, -104, -50, -102, -81, -113, -81, -113, -51)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_vy7fe"]
polygon = PackedVector2Array(-114, -14, -112, -81, -123, -81, -116, -31)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_o1325"]
polygon = PackedVector2Array(-58, -90, -122, -80, -124, -14, -67, -62, -4, -62, 55, -17, 65, -15, -9, -90)

[sub_resource type="Gradient" id="Gradient_metfq"]
offsets = PackedFloat32Array(0, 0.173333, 0.846667, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.911392, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_2y50f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Outside/Lights/LightOccluder2D4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-35, -20)]
}

[sub_resource type="Animation" id="Animation_metfq"]
resource_name = "new_animation"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Outside/Lights/LightOccluder2D4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-24, -20), Vector2(-24, 47)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6syyc"]
_data = {
&"RESET": SubResource("Animation_2y50f"),
&"new_animation": SubResource("Animation_metfq")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_metfq"]
polygon = PackedVector2Array(-105, -29, -108, -27, -107, -24, -103, -25)

[sub_resource type="Gradient" id="Gradient_o1325"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vy7fe"]
gradient = SubResource("Gradient_o1325")
width = 2048
height = 2048
fill = 1
fill_to = Vector2(0.344037, 0.793578)

[sub_resource type="Animation" id="Animation_10qhy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Outside/Lights/Sun:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Outside/Lights/Sun:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Outside/Lights/Sun:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.759908, 0.536789, 0.300291, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Outside/Lights/Sun:shadow_filter_smooth")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vy7fe"]
resource_name = "breathing"
length = 5.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Outside/Lights/Sun:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.0, 1.85, 2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Outside/Lights/Sun:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [13.0, 12.0, 13.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Outside/Lights/Sun:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.759908, 0.536789, 0.300291, 1), Color(0.606706, 0.417095, 0.212677, 1), Color(0.759908, 0.536789, 0.300291, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Outside/Lights/Sun:shadow_filter_smooth")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2y50f"]
_data = {
&"RESET": SubResource("Animation_10qhy"),
&"breathing": SubResource("Animation_vy7fe")
}

[sub_resource type="Gradient" id="Gradient_1ainy"]
interpolation_mode = 2
interpolation_color_space = 2
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o1325"]
gradient = SubResource("Gradient_1ainy")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_10qhy"]
polygon = PackedVector2Array(-89, 33, -81, 33, -80, 79, -89, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_metfq"]
size = Vector2(42, 3)

[node name="House" type="Node2D"]
light_mask = 4
visibility_layer = 4
script = ExtResource("1_metfq")

[node name="DummyCanvas" type="CanvasModulate" parent="."]
unique_name_in_owner = true
visible = false
visibility_layer = 4
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="DummyBackground" type="Sprite2D" parent="."]
light_mask = 3
position = Vector2(-16.5, -30)
scale = Vector2(1.64904, 388)
texture = SubResource("GradientTexture1D_10qhy")

[node name="Inside" type="Node2D" parent="."]

[node name="Foreground" type="TileMapLayer" parent="Inside"]
light_mask = 2
visibility_layer = 2
z_index = 10
tile_map_data = PackedByteArray("AAAEAPz/AAAGAAsAAAAEAP3/AAAGAAsAAAAEAP7/AAAGAAsAAAAEAP//AAAGAAsAAAAEAAAAAAAGAAsAAAAEAAEAAAAGAAsAAAAEAAIAAAAGAAsAAAAEAAMAAAAGAAsAAAAEAAQAAAAGAAsAAAD4//z/AAACAAwAAAD4//3/AAADAAsAAAD4/wAAAAADAAoAAAD4//v/AAADAAsAAAAEAPv/AAAGAAsAAAD6//r/AAACAAkAAAD4//r/AAAAAAkAAAD5//r/AAABAAkAAAD7//r/AAADAAkAAAD8//r/AAAEAAkAAAD9//r/AAAEAAkAAAD+//r/AAAFAAkAAAD///r/AAAGAAkAAAAAAPr/AAAEAAkAAAABAPr/AAAHAAkAAAACAPr/AAAIAAkAAAADAPr/AAAJAAkAAAAEAPr/AAAKAAkAAAD5//n/AAABAAgAAAD6//n/AAACAAgAAAD7//n/AAADAAgAAAD8//n/AAAEAAgAAAD9//n/AAAEAAgAAAD+//n/AAAFAAgAAAD///n/AAAGAAgAAAAAAPn/AAAGAAgAAAABAPn/AAAHAAgAAAACAPn/AAAIAAgAAAADAPn/AAAJAAgAAAD6//j/AAACAAcAAAD7//j/AAADAAcAAAD8//j/AAAEAAcAAAD9//j/AAAFAAcAAAD+//j/AAAFAAcAAAD///j/AAAFAAcAAAAAAPj/AAAGAAcAAAABAPj/AAAHAAcAAAACAPj/AAAIAAcAAAD7//f/AAADAAYAAAD8//f/AAAEAAYAAAD9//f/AAAFAAYAAAD+//f/AAAFAAYAAAD///f/AAAFAAYAAAAAAPf/AAAGAAYAAAABAPf/AAAHAAYAAAD8//b/AAAEAAUAAAD9//b/AAAFAAUAAAD+//b/AAAFAAUAAAD///b/AAAFAAUAAAAAAPb/AAAGAAUAAAD9//X/AAAFAAQAAAD+//X/AAAFAAQAAAD///X/AAAFAAQAAAD4/wEAAAACAA0AAAD5/wIAAAACAA4AAAD6/wIAAAADAA4AAAD6/wMAAAACAA8AAAD6/wQAAAACAA8AAAD4//7/AAADAAoAAAA=")
tile_set = SubResource("TileSet_oi3di")

[node name="Backgrund" type="TileMapLayer" parent="Inside"]
light_mask = 6
visibility_layer = 6
material = SubResource("CanvasItemMaterial_n6hdu")
tile_map_data = PackedByteArray("AAD7//7/AAABAAEAAAD8//7/AAACAAEAAAD9//7/AAADAAEAAAD7////AAABAAEAAAD8////AAACAAEAAAD9////AAADAAEAAAD7/wAAAAABAAEAAAD8/wAAAAACAAEAAAD9/wAAAAADAAEAAAD7/wEAAAABAAEAAAD8/wEAAAACAAEAAAD9/wEAAAADAAEAAAD7/wIAAAABAAEAAAD8/wIAAAACAAEAAAD9/wIAAAADAAEAAAD7/wMAAAABAAEAAAD8/wMAAAACAAEAAAD9/wMAAAADAAEAAAD7/wQAAAABAAEAAAD8/wQAAAACAAEAAAD9/wQAAAADAAEAAAD+//7/AAABAAEAAAD///7/AAACAAEAAAAAAP7/AAADAAEAAAD+////AAABAAEAAAD/////AAACAAEAAAAAAP//AAADAAEAAAD+/wAAAAABAAEAAAD//wAAAAACAAEAAAAAAAAAAAADAAEAAAD+/wEAAAABAAEAAAD//wEAAAACAAEAAAAAAAEAAAADAAEAAAD+/wIAAAABAAEAAAD//wIAAAACAAEAAAAAAAIAAAADAAEAAAD+/wMAAAABAAEAAAD//wMAAAACAAEAAAAAAAMAAAADAAEAAAD+/wQAAAABAAEAAAD//wQAAAACAAEAAAAAAAQAAAADAAEAAAABAP7/AAABAAEAAAACAP7/AAACAAEAAAADAP7/AAADAAEAAAABAP//AAABAAEAAAACAP//AAACAAEAAAADAP//AAADAAEAAAABAAAAAAABAAEAAAACAAAAAAACAAEAAAADAAAAAAADAAEAAAABAAEAAAABAAEAAAACAAEAAAACAAEAAAADAAEAAAADAAEAAAABAAIAAAABAAEAAAACAAIAAAACAAEAAAADAAIAAAADAAEAAAABAAMAAAABAAEAAAACAAMAAAACAAEAAAADAAMAAAADAAEAAAABAAQAAAABAAEAAAACAAQAAAACAAEAAAADAAQAAAADAAEAAAD5//v/AAACAAEAAAD6//v/AAADAAEAAAD5//z/AAACAAEAAAD6//z/AAADAAEAAAD5//3/AAACAAEAAAD6//3/AAADAAEAAAD7//v/AAABAAEAAAD8//v/AAACAAEAAAD9//v/AAADAAEAAAD7//z/AAABAAEAAAD8//z/AAACAAEAAAD9//z/AAADAAEAAAD7//3/AAABAAEAAAD8//3/AAACAAEAAAD9//3/AAADAAEAAAD+//v/AAABAAEAAAD///v/AAACAAEAAAAAAPv/AAADAAEAAAD+//z/AAABAAEAAAD///z/AAACAAEAAAAAAPz/AAADAAEAAAD+//3/AAABAAEAAAD///3/AAACAAEAAAAAAP3/AAADAAEAAAABAPv/AAABAAEAAAACAPv/AAACAAEAAAADAPv/AAADAAEAAAABAPz/AAABAAEAAAACAPz/AAACAAEAAAADAPz/AAADAAEAAAABAP3/AAABAAEAAAACAP3/AAACAAEAAAADAP3/AAADAAEAAAD5//7/AAABAAEAAAD6//7/AAACAAEAAAD5////AAABAAEAAAD6////AAACAAEAAAD5/wAAAAABAAEAAAD6/wAAAAACAAEAAAD5/wEAAAABAAEAAAD6/wEAAAACAAEAAAA=")
tile_set = SubResource("TileSet_oi3di")

[node name="Lights" type="Node2D" parent="Inside"]
unique_name_in_owner = true

[node name="PointLight2D2" type="PointLight2D" parent="Inside/Lights"]
position = Vector2(-26, -126)
scale = Vector2(0.340942, 0.340942)
color = Color(0.759908, 0.536789, 0.300291, 1)
energy = 1.5
range_item_cull_mask = 2
shadow_enabled = true
shadow_filter = 2
shadow_item_cull_mask = 2
texture = SubResource("GradientTexture2D_6syyc")
texture_scale = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Inside/Lights"]
root_node = NodePath("../PointLight2D2")
libraries = {
&"": SubResource("AnimationLibrary_vy7fe")
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="Inside/Lights"]
position = Vector2(-10, 81)
occluder = SubResource("OccluderPolygon2D_6syyc")
sdf_collision = false
occluder_light_mask = 6

[node name="LightOccluder2D3" type="LightOccluder2D" parent="Inside/Lights"]
position = Vector2(-8, -2)
occluder = SubResource("OccluderPolygon2D_vy7fe")
occluder_light_mask = 6

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Inside/Lights"]
position = Vector2(11, -66)
occluder = SubResource("OccluderPolygon2D_o1325")
occluder_light_mask = 6

[node name="Outside" type="Node2D" parent="."]

[node name="Outside" type="TileMapLayer" parent="Outside"]
unique_name_in_owner = true
visible = false
z_index = 100
tile_map_data = PackedByteArray("AAD9//7/AAAEAAwAAAD9////AAAEAAwAAAD+//7/AAAFAAwAAAD+////AAAFAAwAAAD///7/AAAEAAwAAAD/////AAAEAAwAAAAAAP7/AAAFAAwAAAAAAP//AAAFAAwAAAD//wAAAAAEAAwAAAD//wEAAAAEAAwAAAAAAAAAAAAFAAwAAAAAAAEAAAAFAAwAAAABAAAAAAAEAAwAAAABAAEAAAAEAAwAAAACAAAAAAAFAAwAAAACAAEAAAAFAAwAAAD9/wAAAAAEAAwAAAD9/wEAAAAEAAwAAAD+/wAAAAAFAAwAAAD+/wEAAAAFAAwAAAABAP7/AAAEAAwAAAABAP//AAAEAAwAAAACAP7/AAAFAAwAAAACAP//AAAFAAwAAAD//wIAAAAEAAwAAAD//wMAAAAEAAwAAAAAAAIAAAAFAAwAAAAAAAMAAAAFAAwAAAD9/wIAAAAEAAwAAAD9/wMAAAAEAAwAAAD+/wIAAAAFAAwAAAD+/wMAAAAFAAwAAAABAAIAAAAEAAwAAAABAAMAAAAEAAwAAAACAAIAAAAFAAwAAAACAAMAAAAFAAwAAAD7/wIAAAAEAAwAAAD7/wMAAAAEAAwAAAD8/wIAAAAFAAwAAAD8/wMAAAAFAAwAAAD7/wAAAAAEAAwAAAD7/wEAAAAEAAwAAAD8/wAAAAAFAAwAAAD8/wEAAAAFAAwAAAD7//7/AAAEAAwAAAD7////AAAEAAwAAAD8//7/AAAFAAwAAAD8////AAAFAAwAAAD5//z/AAADAAwAAAD5//3/AAADAA0AAAD6//z/AAAFAAwAAAD6//3/AAAFAAwAAAD5//7/AAADAAwAAAD5////AAADAA0AAAD6//7/AAAFAAwAAAD6////AAAFAAwAAAD5/wAAAAADAAwAAAD5/wEAAAADAA0AAAD6/wAAAAAFAAwAAAD6/wEAAAAFAAwAAAD5/wIAAAACAA4AAAD6/wIAAAADAA4AAAD6/wMAAAACAA8AAAD7//z/AAAEAAwAAAD7//3/AAAEAAwAAAD8//z/AAAFAAwAAAD8//3/AAAFAAwAAAD7/wQAAAAEAAwAAAD8/wQAAAAFAAwAAAD9//z/AAAEAAwAAAD9//3/AAAEAAwAAAD+//z/AAAFAAwAAAD+//3/AAAFAAwAAAD9/wQAAAAEAAwAAAD+/wQAAAAFAAwAAAD///z/AAAEAAwAAAD///3/AAAEAAwAAAAAAPz/AAAFAAwAAAAAAP3/AAAFAAwAAAD//wQAAAAEAAwAAAAAAAQAAAAFAAwAAAABAPz/AAAEAAwAAAABAP3/AAAEAAwAAAACAPz/AAAFAAwAAAACAP3/AAAFAAwAAAABAAQAAAAEAAwAAAACAAQAAAAFAAwAAAADAPz/AAAEAAwAAAADAP3/AAAEAAwAAAAEAPz/AAAGAAsAAAAEAP3/AAAGAAsAAAADAP7/AAAEAAwAAAADAP//AAAEAAwAAAAEAP7/AAAGAAsAAAAEAP//AAAGAAsAAAADAAAAAAAEAAwAAAADAAEAAAAEAAwAAAAEAAAAAAAGAAsAAAAEAAEAAAAGAAsAAAADAAIAAAAEAAwAAAADAAMAAAAEAAwAAAAEAAIAAAAGAAsAAAAEAAMAAAAGAAsAAAADAAQAAAAEAAwAAAAEAAQAAAAGAAsAAAD4//z/AAACAAwAAAD4//3/AAACAA0AAAD4//7/AAACAAwAAAD4////AAACAA0AAAD4/wAAAAACAAwAAAD4/wEAAAACAA0AAAD4//v/AAADAAoAAAD5//v/AAAEAAoAAAD6//v/AAAFAAoAAAD7//v/AAAEAAoAAAD8//v/AAAFAAoAAAD9//v/AAAEAAoAAAD+//v/AAAFAAoAAAD///v/AAAEAAoAAAAAAPv/AAAFAAoAAAABAPv/AAAEAAoAAAACAPv/AAAFAAoAAAADAPv/AAAEAAoAAAAEAPv/AAAGAAoAAAD6//r/AAACAAkAAAD4//r/AAAAAAkAAAD5//r/AAABAAkAAAD7//r/AAADAAkAAAD8//r/AAAEAAkAAAD9//r/AAAEAAkAAAD+//r/AAAFAAkAAAD///r/AAAGAAkAAAAAAPr/AAAEAAkAAAABAPr/AAAHAAkAAAACAPr/AAAIAAkAAAADAPr/AAAJAAkAAAAEAPr/AAAKAAkAAAD5//n/AAABAAgAAAD6//n/AAACAAgAAAD7//n/AAADAAgAAAD8//n/AAAEAAgAAAD9//n/AAAEAAgAAAD+//n/AAAFAAgAAAD///n/AAAGAAgAAAAAAPn/AAAGAAgAAAABAPn/AAAHAAgAAAACAPn/AAAIAAgAAAADAPn/AAAJAAgAAAD6//j/AAACAAcAAAD7//j/AAADAAcAAAD8//j/AAAEAAcAAAD9//j/AAAFAAcAAAD+//j/AAAFAAcAAAD///j/AAAFAAcAAAAAAPj/AAAGAAcAAAABAPj/AAAHAAcAAAACAPj/AAAIAAcAAAD7//f/AAADAAYAAAD8//f/AAAEAAYAAAD9//f/AAAFAAYAAAD+//f/AAAFAAYAAAD///f/AAAFAAYAAAAAAPf/AAAGAAYAAAABAPf/AAAHAAYAAAD8//b/AAAEAAUAAAD9//b/AAAFAAUAAAD+//b/AAAFAAUAAAD///b/AAAFAAUAAAAAAPb/AAAGAAUAAAD9//X/AAAFAAQAAAD+//X/AAAFAAQAAAD///X/AAAFAAQAAAD6/wQAAAACAA8AAAA=")
tile_set = SubResource("TileSet_oi3di")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Outside"]
light_mask = 4
visibility_layer = 4
position = Vector2(-111, -2)
rotation = 0.523599
amount = 6
lifetime = 10.0
preprocess = 5.0
speed_scale = 1.2
emission_shape = 3
emission_rect_extents = Vector2(5, 7.5)
gravity = Vector2(1, -0.25)
orbit_velocity_min = -0.01
orbit_velocity_max = -0.01
color_ramp = SubResource("Gradient_metfq")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Outside"]
light_mask = 4
visibility_layer = 4
position = Vector2(-107, -12)
rotation = 0.523599
amount = 6
lifetime = 10.0
preprocess = 5.0
speed_scale = 1.2
emission_shape = 3
emission_rect_extents = Vector2(5, 7.5)
gravity = Vector2(1, 0.5)
orbit_velocity_min = 0.01
orbit_velocity_max = 0.01
color_ramp = SubResource("Gradient_metfq")

[node name="Lights" type="Node2D" parent="Outside"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Outside/Lights"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_6syyc")
}
autoplay = "new_animation"

[node name="LightOccluder2D4" type="LightOccluder2D" parent="Outside/Lights"]
position = Vector2(-35, -20)
occluder = SubResource("OccluderPolygon2D_metfq")
occluder_light_mask = 4

[node name="Sprite2D" type="Sprite2D" parent="Outside/Lights/LightOccluder2D4"]
position = Vector2(-105.947, -26.4278)
rotation = -0.523599
scale = Vector2(0.0315207, 0.0247769)
skew = 0.179769
texture = ExtResource("3_6syyc")

[node name="Sun" type="PointLight2D" parent="Outside/Lights"]
position = Vector2(-152, -26)
rotation = 0.125844
scale = Vector2(0.340942, 0.340942)
color = Color(0.759908, 0.536789, 0.300291, 1)
energy = 2.0
range_item_cull_mask = 524292
shadow_enabled = true
shadow_filter = 2
shadow_item_cull_mask = 524292
texture = SubResource("GradientTexture2D_vy7fe")
texture_scale = 2.0

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Outside/Lights"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_2y50f")
}
autoplay = "breathing"

[node name="PointLight2D3" type="PointLight2D" parent="Outside/Lights"]
light_mask = 0
visibility_layer = 0
position = Vector2(-89, 58)
scale = Vector2(0.228163, 0.228163)
enabled = false
color = Color(0.759908, 0.536789, 0.300291, 1)
energy = 1.97
range_item_cull_mask = 2
shadow_item_cull_mask = 0
texture = SubResource("GradientTexture2D_o1325")
texture_scale = 4.33333

[node name="LightOccluder2D" type="LightOccluder2D" parent="Outside/Lights"]
visible = false
occluder = SubResource("OccluderPolygon2D_10qhy")
occluder_light_mask = 513

[node name="room_area" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="room_area"]
polygon = PackedVector2Array(-111, -79, -112, 31, -80, 31, -80, 80, 64, 80, 64, -79)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-101, 33.5)
shape = SubResource("RectangleShape2D_metfq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-101, 3)
shape = SubResource("RectangleShape2D_metfq")

[connection signal="area_entered" from="room_area" to="." method="_on_room_area_area_entered"]
[connection signal="area_exited" from="room_area" to="." method="_on_room_area_area_exited"]
[connection signal="body_entered" from="room_area" to="." method="_on_room_area_body_entered"]
[connection signal="body_exited" from="room_area" to="." method="_on_room_area_body_exited"]
